@@ -1,0 +1,1 @@
+{{ content_for_index }}
