@@ -3,4 +3,5 @@ All notable changes to this project will be documented in this file.
 
 ## [1.0.0] - 2021-07-24
 ### Added
+- skeleton theme
 - layout
